# ArmDeck

./: .gitignore  CONFIG_SYSTEM.md  README.md  TAURI_IMPLEMENTATION.md  sdkconfig
.github/workflows/: build.yml
components/armdeck_service/: CMakeLists.txt  armdeck_config.c  armdeck_service.c
components/armdeck_service/include/: armdeck_config.h  armdeck_service.h
components/button_matrix/: CMakeLists.txt  button_matrix.c
components/button_matrix/include/: button_matrix.h
main/: CMakeLists.txt  armdeck_ble.c  armdeck_ble.h  armdeck_common.h  armdeck_config.c  armdeck_config.h  armdeck_hid.c  armdeck_hid.h  armdeck_main.c  armdeck_protocol.c  armdeck_protocol.h  armdeck_service.c  armdeck_service.h  button_matrix.c  button_matrix.h  esp_hidd_prf_api.c  hid_dev.c  hid_dev.h  hid_device_le_prf.c  power_button.c  power_button.h
pwa/: index.html  package-lock.json  package.json  vite.config.ts
pwa/src/: App.tsx  vite-env.d.ts
pwa/src/__tests__/: BatteryWidget.test.tsx
pwa/src/__tests__/hooks/: useUnifiedBle.test.tsx
pwa/src/__tests__/mocks/: tauriApi.ts  webBle.ts
pwa/src/ble/: communication.ts  constants.ts  index.ts  types.ts  useBle.ts  utils.ts
pwa/src/components/: BatteryWidget.tsx  ConnectionStatusPanel.tsx  DebugPanel.tsx  KeyGrid.tsx  MacroList.tsx  MacroModal.tsx
pwa/src/config/: bleConfig.ts
pwa/src/data/: macros.ts
pwa/src/hooks/: BleProvider.tsx  useBle.ts  useDeviceConfig.ts  useTauriBle.ts  useTheme.ts  useUnifiedBle.ts  useWebBle.ts
pwa/src/styles/: BatteryWidget.scss  KeyGrid.scss  MacroList.scss  MacroModal.scss  _mixins.scss  _variables.scss  main.scss  variables.scss
pwa/src/styles/components/: _app.scss  _connection-status.scss  _key-grid.scss  _macro-list.scss  _macro-modal.scss
tauri/: package-lock.json  package.json
tauri/src-tauri/: Cargo.toml  tauri.conf.json
tauri/src-tauri/icons/: README.txt
tauri/src-tauri/src/: ble.rs  main.rs
